# dicom2tar

./: .gitignore  DicomSorter.py  Makefile  README.md  Singularity  Vagrantfile  dicom2tar.py  pyproject.toml  requirements.txt  setup.py  sort_rules.py
.circleci/: config.yml
dicom2tar/: DicomSorter.py  README.md  clinical_helpers.py  main.py  sort_rules.py
singularity/: Singularity
test/: Makefile  test_DicomSorter.py
tests/: Makefile
