[tool.poetry]
name = "dicom2tar"
version = "0.2.2"
description = "sort or tar CFMM' data with DicomSorter"
authors = ["ingLi Lu,Ali Khan"]
license = "GNU General Public License v3.0"

[tool.poetry.scripts]
dicom2tar = 'dicom2tar.main:run'


[tool.poetry.dependencies]
python = "^3.8"
pydicom = "1.1.0"
extractCMRRPhysio = "^1.2.20200020"
dicomraw = "^0.4.0"
dcmstack = "0.7.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
